2018-04-12  Carl Hetherington  <cth@carlh.net>

	* Prevent error when starting export without specifying a filename (#1260).

2018-04-11  Carl Hetherington  <cth@carlh.net>

	* Fix 3D DCP handling in the player.

2018-04-10  Carl Hetherington  <cth@carlh.net>

	* Fix disappearing subtitles when they are added from text files
	alongside video content which also contain subtitles (#1271).

2018-04-06  Carl Hetherington  <cth@carlh.net>

	* Fix missing start icon for the player in Linux.

2018-04-05  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

	* Fix crash on startup if there are no audio devices (#1265).

	* Fix non-working arrow keys / space in text fields (#1263).

	* Fix assertion failures with 3D content in some cases.

2018-03-28  Carl Hetherington  <cth@carlh.net>

	* Disable audio mapping control when analysing audio (#1250).

2018-03-27  Carl Hetherington  <cth@carlh.net>

	* Use a label rather than a tooltip to tell users why they can't
	refer to DCPs.

2018-03-26  Carl Hetherington  <cth@carlh.net>

	* Add real-time mouse cursor readout in audio analysis (rest of #1082)

	* Add time axis to audio analysis (part of #1082).

	* Note: from this point in the ChangeLog release versions
	are marked using git tags and not written to the ChangeLog.

2018-03-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.13.2 released.

2018-03-24  Carl Hetherington  <cth@carlh.net>

	* Fix crash when changing DCP audio channel count (#1253).

	* Fix update checker error when there is no test
	version.

	* Updated fr_FR translation from Thierry Journet.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Add space shortcut to start/stop playback, arrows to go
	back/forward one frame and Ctrl-T to open timeline (#1201).

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Allow CPL selection in player (#1239).

	* Add hint about making a DCP with a very different frame rate
	to the content.

2018-03-21  Carl Hetherington  <cth@carlh.net>
